Added General Styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<h2>Recentrly Added</h2>
+<h2 class="page-header">Recentrly Added</h2>
 <div>
     <% books.forEach(book => { %>
         <a href="/books/<%= book.id %>">
