--- a/public/stylesheets/shared/header.css
+++ b/public/stylesheets/shared/header.css
@@ -34,6 +34,7 @@
     text-decoration: none;
     color: var(--color-text-light);
     font-weight: var(--nav-link-font-weight);
+    padding: 1rem;
     transition: 300ms;
 }
 
